--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
         <meta name="theme color" content="#2091f9">
 
+
+        <div id="google_translate_element" class="google"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+	new google.translate.TranslateElement({pageLanguage: 'in', includedLanguages: 'ca,eu,gl,en,fr,it,pt,de,es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true}, 'google_translate_element');
+        }
+</script>
+
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
         <!-- Primary Meta Tags -->
 
 <meta name="title" content="Sale Mr Computer" />
@@ -50,26 +61,7 @@ computer products right now." />
             <nav class="nav container">
                 <div class="nav__logo">
                     <h2 class="nav__title">SaleMrcomputer.</h2>
-            </div>
-            <ul class="nav__link nav__link--menu">
-                <li class="nav__items">
-                    <a href="a" class="nav__link">Start</a>
-                </li>
-                <ul class="nav__link nav__link--menu">
-                    <li class="nav__items">
-                        <a href="a" class="nav__link">About</a>
-                    </li>
-                <ul class="nav__link nav__link--menu">
-                    <li class="nav__items">
-                        <a href="a" class="nav__link">contact</a>
-                    </li>
-                <ul class="nav__link nav__link--menu">
-                    <li class="nav__items">
-                        <a href="a" class="nav__link">Blog</a>
-                    </li>
-                    
-                <img src="./imagenes/close.svg" class="nav__close">
-                    
+            </div>        
             </ul>
             <div class="nav__menu">
                 <img src="./imagenes/menu.svg" class="nav__img">
